// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Lists BasicList renders 1`] = `
<Fragment>
  <h2
    id="basic-list"
  >
    Basic list
  </h2>
  <p>
    Add 
    <Property
      value=".list"
    />
     to a list to display the basic list. Our lists do not use bullet points.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list"
    >
      <li>
        Bread
      </li>
      <li>
        Coffee beans
      </li>
      <li>
        Milk
      </li>
      <li>
        Butter
      </li>
    </ul>
  </ComponentPreview>
  <h3>
    Nested list
  </h3>
  <p>
    Use nesting with lists to signify that some items are children of another item.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list"
    >
      <li>
        Coffee
      </li>
      <li>
        Tea
        <ul>
          <li>
            Black tea
          </li>
          <li>
            Green tea
          </li>
          <li>
            Ice tea
          </li>
        </ul>
      </li>
      <li>
        Milk
      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists DescriptionList renders 1`] = `
<Fragment>
  <h2
    id="description-list"
  >
    Description list
  </h2>
  <p>
    The description list lets you provide each item with a more specific description of each item. Add 
    <Property
      value=".description-list"
    />
     to your dl.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <dl
      className="description-list"
    >
      

      <dt>
        Frog
      </dt>
      <dd>
        Wet green thing that croaks.
      </dd>
      

      <dt>
        Rabbit
      </dt>
      <dd>
        Warm fluffy thing that jumps.
      </dd>
      

      <dt>
        Color
      </dt>
      <dd>
        Any hue except white or black.
      </dd>
      

    </dl>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists HoverItemList renders 1`] = `
<Fragment>
  <h2
    id="hover-item-list"
  >
    Hover item list 
  </h2>
  <p>
    Include 
    <Property
      value=".item-list-hover"
    />
     to give your items a hover effect. You can use this on any variation of 
    <Property
      value=".item-list"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="item-list item-list-hover"
    >
      <li>
        

        <span>
          4925*********004
        </span>
        

        <span
          className="status status-success"
        >
          Active
        </span>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <span
          className="status status-warning"
        >
          Expires soon
        </span>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <span
          className="status status-danger"
        >
          Expired
        </span>
        

      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists InlineList renders 1`] = `
<Fragment>
  <h2
    id="inline-list"
  >
    Inline list
  </h2>
  <p>
    Use 
    <Property
      value=".list-inline"
    />
     on a list to make all items appear on the same line.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list list-inline"
    >
      <li>
        Coffee
      </li>
      <li>
        Tea
      </li>
      <li>
        Milk
      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists ItemList renders 1`] = `
<Fragment>
  <h2
    id="item-list"
  >
    Item list 
  </h2>
  <p>
    <Property
      value=".item-list"
    />
    s is a good way to offer more extensive information about each item. Each item has their own box which seperates the items more clearly than our other options.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="item-list"
    >
      <li>
        <div>
          <h5>
            Foo
          </h5>
          <small>
            Due date 2 days
          </small>
        </div>
        <div>
          <span
            className="h5 text-hightlight"
          >
            2120 kr
          </span>
        </div>
      </li>
      <li>
        <div>
          <h5>
            Bar
          </h5>
          <small>
            Due date 1 day
          </small>
        </div>
        <div>
          <span
            className="h5 text-hightlight"
          >
            1100 kr
          </span>
        </div>
      </li>
      <li>
        <div>
          <h5>
            Baz
          </h5>
          <small>
            Due date 5 days
          </small>
        </div>
        <div>
          <span
            className="h5 text-hightlight"
          >
            200 kr
          </span>
        </div>
      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists SettingsList renders 1`] = `
<Fragment>
  <h2
    id="settings-list"
  >
    Settings list
  </h2>
  <p>
    Use 
    <Property
      value=".settings-list"
    />
     to visualize different settings in your web application.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="settings-list"
    >
      <li>
        

        <i
          className="material-icons text-success"
        >
          check
        </i>
        Shovels and tapestry newsletter
        

      </li>
      <li>
        

        <i
          className="material-icons text-warning"
        >
          remove
        </i>
        Spoon collectors weekly newsletter
        

      </li>
      <li>
        

        <i
          className="material-icons text-danger"
        >
          clear
        </i>
        Energetic squirrels newsletter
        

      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists StripedItemList prevents default on anchors 1`] = `
<Fragment>
  <h2
    id="item-list-striped"
  >
    Striped item list
  </h2>
  <p>
    If you want more seperation between each item you can use 
    <Property
      value=".item-list-striped"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="item-list item-list-striped"
    >
      <li>
        <span>
          4925*********004
        </span>
        <div
          className="action-list"
        >
          

          <Icon
            icon="more_vert"
          />
          

          <div
            className="action-menu"
          >
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="bookmark"
              />
              Add bookmark
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="business_center"
              />
              Add client
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="add_circle"
              />
              Add document
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="person_add"
              />
              Add user
            </a>
            

          </div>
        </div>
      </li>
      <li>
        

        <span>
          
			
          4925*********004
          
			
          <span
            className="badge badge-blue"
          >
            new
          </span>
          

        </span>
        

        <a
          href="https://developer.payex.com"
        >
          developer.payex.com
        </a>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <i
          className="material-icons"
        >
          star
        </i>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <span
          className="status status-success"
        >
          Active
        </span>
        

        <button
          className="btn btn-danger btn-xs"
          type="button"
        >
          <i
            className="material-icons"
          >
            delete
          </i>
        </button>
        

      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists StripedItemList renders 1`] = `
<Fragment>
  <h2
    id="item-list-striped"
  >
    Striped item list
  </h2>
  <p>
    If you want more seperation between each item you can use 
    <Property
      value=".item-list-striped"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="item-list item-list-striped"
    >
      <li>
        <span>
          4925*********004
        </span>
        <div
          className="action-list"
        >
          

          <Icon
            icon="more_vert"
          />
          

          <div
            className="action-menu"
          >
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="bookmark"
              />
              Add bookmark
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="business_center"
              />
              Add client
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="add_circle"
              />
              Add document
            </a>
            

            <a
              href="#"
              onClick={[Function]}
            >
              <Icon
                icon="person_add"
              />
              Add user
            </a>
            

          </div>
        </div>
      </li>
      <li>
        

        <span>
          
			
          4925*********004
          
			
          <span
            className="badge badge-blue"
          >
            new
          </span>
          

        </span>
        

        <a
          href="https://developer.payex.com"
        >
          developer.payex.com
        </a>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <i
          className="material-icons"
        >
          star
        </i>
        

      </li>
      <li>
        

        <span>
          4925*********004
        </span>
        

        <span
          className="status status-success"
        >
          Active
        </span>
        

        <button
          className="btn btn-danger btn-xs"
          type="button"
        >
          <i
            className="material-icons"
          >
            delete
          </i>
        </button>
        

      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use lists to give a structured view of information.
  </p>
  <BasicList />
  <InlineList />
  <DescriptionList />
  <SettingsList />
  <ItemList />
  <ItemListLarge />
  <ItemListBordered />
  <HoverItemList />
  <StripedItemList />
</DocContainer>
`;
